# agent-loop

./: .env.example  .gitignore  pyproject.toml
config/: mcp_servers.yaml
core/: agent_graph.py  agent_manager.py  memory_compactor.py  state.py
docs/: api-reference.md  architecture.md  mcp-integration.md  skill-guide.md
mcp/: client_pool.py  server_manager.py  tool_adapter.py
skills/: converter.py  loader.py  registry.py  schemas.py
skills/code_review/: SKILL.md
skills/code_review/scripts/: linter.py  security_check.py
storage/: checkpoint.py  mysql_checkpoint.py
tests/: test_agent_integration.py  test_agent_loop.py  test_agent_manager.py  test_mcp.py  test_mcp_integration.py  test_memory_compaction.py  test_mysql_checkpoint.py  test_skills.py  test_tools.py
tools/: file_tool.py  http_tool.py  registry.py  shell_tool.py
